tests/snapshots/test_runner__tests__compiler__parse__expected_expression_function.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let x = | x - 2

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/parse/expected_expression_function.kk:1:13
  │
1 │ let x = | x - 2
  │             ^ Syntax error: not expecting `-` here
  │
  = Note that `-` is only used to represent negative numbers, for example `-123.4`.

    We found this error when we are trying to parse a Pattern.
    Examples of Pattern are:

    Example #1:

      1

    Example #2:

      "hello world"

    Example #3:

      true

    Example #4:

      Some(x)

    Example #5:

      []

    Example #6:

      { x, y, }
